--- a/src/index.css
+++ b/src/index.css
@@ -37,11 +37,15 @@
     @apply text-subtext text-base md:text-lg font-secondary leading-relaxed;
   }
 
-  /* button {
-    @apply text-text bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-4 focus:ring-primary-500/50 font-medium rounded-lg text-sm px-6 py-3 text-center transition-all duration-200 transform hover:scale-105 active:scale-95;
-  } */
+  button {
+    @apply rounded-lg py-2 px-6 bg-primary hover:bg-primary-100 transition-colors duration-200 my-auto;
+  }
 
-  a {
-    @apply text-primary-400 hover:text-primary-500 transition-colors duration-200;
+  button.secondary {
+    @apply rounded-lg py-2 px-6 bg-transparent hover:bg-white text-white hover:text-black transition-colors duration-200 my-auto;
+  }
+
+  a.button-primary {
+    @apply rounded-lg py-2 px-6 bg-primary hover:bg-primary-100 transition-colors duration-200 my-auto;
   }
 }
