--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@
   }
 
   h4 {
-    @apply font-bold text-text font-primary tracking-tight text-lg md:text-xl;
+    @apply font-bold text-accent font-primary tracking-tight text-lg md:text-xl;
   }
 
   p,
