--- a/src/index.css
+++ b/src/index.css
@@ -36,14 +36,18 @@
   }
 
   button {
-    @apply rounded-lg py-2 px-6 bg-primary hover:bg-primary-100 transition-colors duration-200 my-auto;
+    @apply py-2 px-6 bg-primary hover:bg-primary-100 transition-colors duration-200 my-auto;
   }
 
   button.secondary {
-    @apply rounded-lg py-2 px-6 bg-transparent hover:bg-white text-white hover:text-black transition-colors duration-200 my-auto;
+    @apply py-2 px-6 bg-transparent hover:bg-white text-white hover:text-black transition-colors duration-200 my-auto;
   }
 
   a.button-primary {
-    @apply rounded-lg py-2 px-6 bg-primary hover:bg-primary-100 transition-colors duration-200 my-auto;
+    @apply py-2 px-6 bg-primary hover:bg-primary-100 transition-colors duration-200 my-auto border-2 border-primary;
+  }
+
+  a.button-secondary {
+    @apply py-2 px-6 bg-transparent border-2 border-white hover:bg-white text-white hover:text-black transition-colors duration-200 my-auto;
   }
 }
