--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   }
 
   h1 {
-    @apply text-7xl lg:text-9xl font-bold text-white mb-6 font-hero tracking-tight;
+    @apply text-7xl md:text-8xl lg:text-9xl font-bold text-white mb-6 font-hero tracking-tight;
   }
 
   h2 {
