--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,6 @@
   }
 
   em {
-    @apply from-primary-200 via-primary-100 to-primary bg-gradient-to-tr bg-clip-text text-transparent not-italic;
+    @apply from-primary via-primary-100 to-primary-200 bg-gradient-to-tr bg-clip-text text-transparent not-italic;
   }
 }
