--- a/src/index.css
+++ b/src/index.css
@@ -42,8 +42,7 @@
   button.secondary {
     @apply py-2 px-6 bg-transparent hover:bg-white text-white hover:text-black transition-colors duration-200 my-auto;
   }
-
-  a.button-primary {
+  e a.button-primary {
     @apply py-2 px-6 bg-primary hover:bg-primary-100 transition-colors duration-200 my-auto border-2 border-primary;
   }
 
